--- a/한화생명/assets/css/style.css
+++ b/한화생명/assets/css/style.css
@@ -61,7 +61,7 @@
   width: 100%;
   /* height: 256px; */
   background-color: #fff;
-  /* display: none; 이풍진 */
+  /* display: none; */
   display: block;
 }
 
@@ -140,6 +140,62 @@
 .sub-menu .container .sub-menu-list ul li a:hover {
   color: #fa6600;
 }
+
+/* //sub-menu */
+
+.sub-menu .container .sub-menu-help {
+  padding-left: 66px;
+  /* width: 50%; */
+}
+
+.sub-menu .container .sub-menu-help .help-join {
+  display: flex;
+  align-items: center;
+}
+
+.sub-menu .container .sub-menu-help .help-join .help-join-text {
+  font-weight: 300;
+  color: #7E7C7A;
+  line-height: 1.5px;
+}
+
+.sub-menu .container .sub-menu-help .help-join .help-join-tel {
+  font-size: 30px;
+  font-weight: 700;
+  color: #272B2F;
+}
+
+.sub-menu .container .sub-menu-help .sub-menu-counseling {
+  display: flex;
+  /* justify-content: space-between; */
+  margin-top: 32px;
+  gap: 32px;
+}
+
+.sub-menu .container .sub-menu-help .sub-menu-counseling a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sub-menu .container .sub-menu-help .sub-menu-counseling a img {
+  width: 44px;
+  height: 44px;
+}
+
+.sub-menu .container .sub-menu-question {
+
+}
+
+
+
+
+
+
+
+
+
+
 
 .header .container div.i-class {
   margin-left: 48px;
