--- a/한화생명/assets/css/reset.css
+++ b/한화생명/assets/css/reset.css
@@ -41,4 +41,11 @@
 a {
   text-decoration: none;
   color: inherit;
+  /* display: inline-block; */
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
