--- a/한화생명/assets/css/style.css
+++ b/한화생명/assets/css/style.css
@@ -258,10 +258,11 @@
 }
 
 .recomend .container .recomend-left .recomend-banner {
+  position: relative;
   height: 413px;
   border-radius: 20px;
   width: 657px;
-  background-color: rgb(252, 132, 61);
+  overflow: hidden;
   /* padding: 2.5rem; */
 }
 
@@ -275,6 +276,7 @@
 
 .recomend .container .swiper-wrapper {
   height: 100%;
+  /* display: flex; */
 }
 
 .recomend .swiper-slide .slide-title {
@@ -296,6 +298,37 @@
 .recomend .swiper-slide {
   height: 100%;
 }
+
+.recomend .swiper-slide:hover .slide-look {
+  color: #272b2f;
+  background-color: #ffffff;
+  transition: all 0.2s ease-out;
+}
+
+.recomend .swiper-slide:hover .slide-look::after {
+  background-image: url(../img/arrow-right-hover.svg);
+}
+
+.recomend .swiper-slide.slide1 {
+  background-color: rgb(252, 132, 61);
+}
+
+.recomend .swiper-slide.slide2 {
+  background-color: rgb(59, 129, 237);
+}
+
+.recomend .swiper-slide.slide3 {
+  background-color: rgb(137, 127, 230);
+}
+
+.recomend .swiper-slide.slide4 {
+  background-color: rgb(116, 162, 254);
+}
+
+.recomend .swiper-slide.slide5 {
+  background-color: rgb(69, 185, 155);
+}
+
 .recomend .swiper-slide a {
   position: relative;
   height: 100%;
@@ -303,7 +336,14 @@
   padding: 2.5rem;
 }
 
+.recomend .swiper-slide a img {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 .recomend .swiper-slide .slide-look {
+  position: absolute;
   font-size: 18px;
   font-weight: 400;
   height: 56px;
@@ -312,10 +352,51 @@
   line-height: 56px;
   background-color: rgba(255, 255, 255, 0.2);
   padding: 0px 0.75rem 0px 1rem;
-  display: inline-block;
-  position: absolute;
+  display: flex;
   left: 2.5rem;
   bottom: 2.5rem;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.recomend .swiper-slide .slide-look::after {
+  content: "";
+  display: inline-block;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-image: url(../img/arrow-right.svg);
+}
+
+.recomend .recomend-banner-pagination {
+  width: fit-content;
+  height: fit-content;
+  top: 34px;
+  right: 52px;
+  left: auto;
+  opacity: 0.8;
+}
+
+.swiper-pagination-bullet {
+  background: rgba(255, 255, 255, 0.5);
+  opacity: inherit;
+}
+
+.swiper-pagination-bullet-active {
+  background: #ffffff;
+}
+
+.swiper-controls {
+  background: none;
+  background-image: url(../img/stop.svg);
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  z-index: 10;
+  border: 0;
+  width: 8px;
+  height: 8px;
+  opacity: 0.8;
+  cursor: pointer;
 }
 
 .recomend .container .recomend-right img {
@@ -333,9 +414,155 @@
 /* //recomend */
 
 .product {
-  height: 748px;
-  background-color: beige;
+  /* height: 748px; */
+  /* background-color: beige; */
 }
+
+.product .container {
+  padding: 64px 24px;
+}
+
+.product .product-header {
+  display: flex;
+}
+
+.product .product-header .product-header-left {
+  flex-grow: 1;
+}
+
+.product .product-header .product-header-left p:nth-of-type(1) {
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.product .product-header .product-header-left p:nth-of-type(2) {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  color: #5e5c5a;
+}
+
+.product .product-header .product-header-right {
+  display: flex;
+  align-items: center;
+}
+
+.product .product-header .product-header-right input[type="number"] {
+  width: 220px;
+  height: 56px;
+  border: 1px solid #e5e4e3;
+  border-radius: 8px;
+  padding: 0 16px;
+  font-size: 18px;
+  color: #403f3e;
+  line-height: 1.5;
+}
+
+.product .product-header .product-header-right .input-gender {
+  display: flex;
+  align-items: center;
+  height: 56px;
+  border: 1px solid #e5e4e3;
+  border-radius: 8px;
+  padding: 0 16px;
+  font-size: 18px;
+  color: #403f3e;
+  line-height: 1.5;
+}
+
+.product
+  .product-header
+  .product-header-right
+  .input-gender
+  input[type="radio"] {
+  position: relative;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  background-color: #f5f5f5;
+  border: 1px solid #e5e4e3;
+  border-radius: 50%;
+}
+
+.product
+  .product-header
+  .product-header-right
+  .input-gender
+  input[type="radio"]:checked::before {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 12px;
+  height: 12px;
+  background-color: #403f3e;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.product .product-header .product-header-right .input-gender label {
+  display: flex;
+  align-items: center;
+}
+.product
+  .product-header
+  .product-header-right
+  .input-gender
+  label:nth-of-type(1) {
+  border-right: 1px solid #f0f0f0;
+  padding-right: 15.5px;
+}
+
+.product
+  .product-header
+  .product-header-right
+  .input-gender
+  label:nth-of-type(2) {
+  padding-left: 15.5px;
+}
+
+.product .product-header .product-header-right .input-gender span {
+  padding-left: 8px;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.product .product-header .product-header-right input::placeholder {
+  color: #7e7c7a;
+  font-weight: 300;
+}
+
+.product .product-header .product-header-right button {
+  border: 0;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.6);
+  box-shadow: inset 100rem 100rem rgba(255, 255, 255, 0.6);
+  background-color: #fa6600;
+  padding: 0 16px;
+  height: 56px;
+  font-weight: 400;
+  font-size: 18px;
+  border-radius: 8px;
+}
+.product .product-menu {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.product .product-menu a {
+  width: calc((100% - 48px) / 3);
+}
+
+.product .product-menu a div {
+  display: flex;
+  align-items: center;
+}
+
+/* //product */
 .notice {
   height: 599px;
   background-color: rgb(247, 247, 164);
