--- a/한화생명/assets/css/style.css
+++ b/한화생명/assets/css/style.css
@@ -774,6 +774,47 @@
   margin-top: 8px;
 }
 
+.notice .container .notice-banner .notice-banner-right .swiper-wrapper .swiper-slide {
+  border-radius: 20px;
+  
+}
+
+.notice .container .notice-banner .notice-banner-right .swiper-wrapper .swiper-slide a {
+  position: relative;
+  height: 100%;
+  padding: 28px 32px;
+}
+
+.notice .container .notice-banner .notice-banner-right .swiper-wrapper .swiper-slide a img {
+  position: absolute;
+  right: 32px;
+  bottom: 28px;
+  width: 120px;
+  height: 140px;
+}
+
+.notice .container .notice-banner .notice-banner-right .slide1 {
+  background-color: rgb(230, 230, 230);
+}
+
+.notice .container .notice-banner .notice-banner-right .slide1 a .notice-banner-title {
+  color: rgb(32, 32, 32);
+}
+
+.notice .container .notice-banner .notice-banner-right .slide1 a .notice-banner-content {
+  color: rgb(32, 32, 32);
+}
+
+
+
+.notice .container .notice-banner .notice-banner-right .slide2 {
+  background-color: rgb(236, 93, 41);
+}
+
+.notice .container .notice-banner .notice-banner-right .slide3 {
+  background-color: rgb(0, 84, 149);
+}
+
 /* //notice */
 .footer {
   height: 361px;
